--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -7,13 +7,13 @@
 
         #top_banner{
             height:100px;
-            background-color:cadetblue;
+            background-color: #bbb;
             color: white;
             padding: 4px;
         }
 
         #adminbar{
-            background-color: white;
+            background-color: #ccc;
             width:800px;
             height: auto;
             margin:auto;
@@ -28,7 +28,7 @@
             height: 40px;
             width: 300px;
             border-radius: 4px;
-            border: solid 1px #ccc;
+            border: solid 1px white;
             padding: 4px;
             font-size: 14px;
         }
@@ -39,7 +39,7 @@
             border-radius: 4px;
             font-weight: bold;
             border: none;
-            background-color: cadetblue;
+            background-color: #bbb;
             color: white;
         }
 
@@ -58,7 +58,7 @@
           <select id="text">
             <option>None</option>
             <option>Bridgewood Secondary School</option>
-          </select>
+          </select> <br><br>
             <input type="text" id="text" placeholder="Victims' Username"> <br><br>
             <input type="text" id="text" placeholder="Date of issue"> <br><br> 
 
