--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -7,7 +7,7 @@
 
         #top_banner{
             height:100px;
-            background-color: #bbb;
+            background-color: black;
             color: white;
             padding: 4px;
         }
@@ -39,7 +39,7 @@
             border-radius: 4px;
             font-weight: bold;
             border: none;
-            background-color: #bbb;
+            background-color: #black;
             color: white;
         }
 
