--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -25,6 +25,7 @@
         }
 
         #text{
+            color: white;
             height: 40px;
             width: 300px;
             border-radius: 4px;
@@ -39,7 +40,7 @@
             border-radius: 4px;
             font-weight: bold;
             border: none;
-            background-color: #black;
+            background-color: black;
             color: white;
         }
 
