--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -4,47 +4,52 @@
     </head>
 
     <style>
+    /* Top banner styling */
+    #top_banner {
+        height: 100px;
+        background-color: black; /* Black background */
+        color: white; /* Text color changed to white */
+        padding: 4px;
+    }
 
-        #top_banner{
-            height:100px;
-            background-color: black;
-            color: white;
-            padding: 4px;
-        }
+    /* Admin bar styling */
+    #adminbar {
+        background-color: #A9A9A9; /* Dark grey background */
+        color: white; /* Text color changed to white */
+        width: 800px;
+        height: auto;
+        margin: auto;
+        margin-top: 50px;
+        padding: 10px;
+        padding-top: 50px;
+        text-align: center;
+        font-weight: bold;
+    }
 
-        #adminbar{
-            background-color: #ccc;
-            width:800px;
-            height: auto;
-            margin:auto;
-            margin-top: 50px;
-            padding: 10px;
-            padding-top: 50px;
-            text-align: center;
-            font-weight: bold;
-        }
+    /* Text input styling */
+    .text-input {
+        background-color: white; /* Background color changed to white */
+        color: white; /* Text color changed to white */
+        height: 40px;
+        width: 300px;
+        border-radius: 4px;
+        border: solid 1px black; /* Border color changed to black */
+        padding: 4px;
+        font-size: 14px;
+    }
 
-        #text{
-            color: white;
-            height: 40px;
-            width: 300px;
-            border-radius: 4px;
-            border: solid 1px white;
-            padding: 4px;
-            font-size: 14px;
-        }
+    /* Submit button styling */
+    #submit_button {
+        width: 300px;
+        height: 40px;
+        border-radius: 4px;
+        font-weight: bold;
+        border: none;
+        background-color: black; /* Background color remains black */
+        color: white; /* Text color remains white */
+    }
+</style>
 
-        #submit_button{
-            width: 300px;
-            height: 40px;
-            border-radius: 4px;
-            font-weight: bold;
-            border: none;
-            background-color: black;
-            color: white;
-        }
-
-    </style>
 
     <body style="font-family: tahoma;background-color: #ccc">
 
