--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -61,17 +61,17 @@
             ATL Learning Trsut - Biox Panle <br><br>
 
             <span style="font-weight: normal;">School</span> <br>
-          <select id="text">
+          <select id="text" style="widht: 300px;">
             <option>None</option>
             <option>Bridgewood Secondary School</option>
           </select> <br><br>
-            <input type="text" id="text" placeholder="Victims' Username"> <br><br>
-            <input type="text" id="text" placeholder="Date of issue"> <br><br> 
+            <input type="text" id="text" placeholder="Victims' Username" style="widht: 300px;"> <br><br>
+            <input type="text" id="text" placeholder="Date of issue" style="widht: 300px;"> <br><br> 
 
             <br><br>
 
             <span style="font-weight: normal;">Type of issue:</span><br>
-            <select id="text">
+            <select id="text" style="widht: 300px;">
                 <option>None</option>
                 <option>Safeguarding Issue (Disclosure of abuse)</option>
                 <option>Safeguarding Issue (Discoloure of a safeguarding issue)</option>
