--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -13,7 +13,7 @@
         }
 
         #adminbar{
-            background-color: #ccc;
+            background-color: #aaa;
             width:800px;
             height: auto;
             margin:auto;
@@ -46,7 +46,7 @@
 
     </style>
 
-    <body style="font-family: tahoma;background-color: #ccc">
+    <body style="font-family: tahoma;background-color: #aaa">
 
         <div id="top_banner">
             <div style="font-size: 40px;">Biox</div>
