--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -5,15 +5,17 @@
 
     <style>
 
+        
+
         #top_banner{
             height:100px;
-            background-color: black;
+            background-color:cadetblue;
             color: white;
             padding: 4px;
         }
 
         #adminbar{
-            background-color: #aaa;
+            background-color: white;
             width:800px;
             height: auto;
             margin:auto;
@@ -25,11 +27,10 @@
         }
 
         #text{
-            color: white;
             height: 40px;
             width: 300px;
             border-radius: 4px;
-            border: solid 1px white;
+            border: solid 1px #ccc;
             padding: 4px;
             font-size: 14px;
         }
@@ -40,12 +41,11 @@
             border-radius: 4px;
             font-weight: bold;
             border: none;
-            background-color: black;
+            background-color: cadetblue;
             color: white;
         }
 
-    </style>
-
+    
     <body style="font-family: tahoma;background-color: #aaa">
 
         <div id="top_banner">
