--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -1,1 +1,83 @@
+<html>
+    <head>
+        <title>Biox</title>
+    </head>
 
+    <style>
+
+        #top_banner{
+            height:100px;
+            background-color:cadetblue;
+            color: white;
+            padding: 4px;
+        }
+
+        #adminbar{
+            background-color: white;
+            width:800px;
+            height: auto;
+            margin:auto;
+            margin-top: 50px;
+            padding: 10px;
+            padding-top: 50px;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        #text{
+            height: 40px;
+            width: 300px;
+            border-radius: 4px;
+            border: solid 1px #ccc;
+            padding: 4px;
+            font-size: 14px;
+        }
+
+        #submit_button{
+            width: 300px;
+            height: 40px;
+            border-radius: 4px;
+            font-weight: bold;
+            border: none;
+            background-color: cadetblue;
+            color: white;
+        }
+
+    </style>
+
+    <body style="font-family: tahoma;background-color: #e9ebee">
+
+        <div id="top_banner">
+            <div style="font-size: 40px;">Biox</div>
+        </div>
+
+        <div id="adminbar">
+            Biox <br><br>
+
+            <span style="font-weight: normal;">General Information</span> <br>
+          <select id="text">
+            <option>Select a school></option>
+            <option>Bridgewood Secondary School</option>
+          </select>
+            <input type="text" id="text" placeholder="Victims'/Offenders' Roblox Username"> <br><br>
+            <select id="text">
+                <option>Select a incident type.</option>
+                <option>Safeguarding Issue (Disclosure of abuse)</option>
+                <option>SafeGuarding Issue (Safeguarding incident)</option>
+                <option>Staff Strike</option>
+                <option>Student Exclusion</option>
+            </select>
+
+            <br><br>
+
+            <input type="text" id="text" placeholder="Incident Notes">
+
+            <br><br>
+
+            <input type="submit" id="submit_button" value="Submit Action">
+
+        </div>
+
+    </body>
+
+    </html>
