--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -56,9 +56,9 @@
 
             <span style="font-weight: normal;">General Information</span> <br>
           <select id="text">
-            <option>Select a school></option>
+            <option>Select a school</option>
             <option>Bridgewood Secondary School</option>
-          </select>
+          </select> <br><br>
             <input type="text" id="text" placeholder="Victims'/Offenders' Roblox Username"> <br><br>
             <select id="text">
                 <option>Select a incident type.</option>
