--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -78,6 +78,55 @@
 
         </div>
 
+        <script>
+document.addEventListener('DOMContentLoaded', function() {
+    document.getElementById('submit_button').addEventListener('click', function(e) {
+        e.preventDefault(); // Prevent the default form submission
+
+        // Capture the form data
+        var schoolSelect = document.querySelector('select[name="school"]');
+        var usernameInput = document.querySelector('input[name="username"]');
+        var issueSelect = document.querySelector('select[name="issueType"]');
+        var notesInput = document.querySelector('input[name="notes"]');
+
+        var school = schoolSelect.value;
+        var username = usernameInput.value;
+        var issueType = issueSelect.value;
+        var notes = notesInput.value;
+
+        // Determine the webhook URL based on the selected school
+        var webhookUrl = '';
+        switch(school) {
+            case 'Bridgewood Secondary School':
+                webhookUrl = 'https://discord.com/api/webhooks/1236325309637464114/3q-SMPwlq_UIRd9GycqoszZpjGPNPY8IcCRffU7Ndj_3q75lB2nj8hiRXs1cGs7UqB7Q';
+                break;
+            // Add other schools and their webhook URLs here
+        }
+
+        // Create the payload to send
+        var payload = {
+            content: `School: ${school}\nUsername: ${username}\nIssue Type: ${issueType}\nNotes: ${notes}`
+        };
+
+        // Send the data to the Discord webhook
+        fetch(webhookUrl, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(payload)
+        }).then(response => {
+            if(response.ok) {
+                alert('Data submitted successfully!');
+            } else {
+                alert('An error occurred while submitting the data.');
+            }
+        });
+    });
+});
+</script>
+
+        
     </body>
 
     </html>
