--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -51,11 +51,12 @@
         <div id="adminbar">
             Biox <br><br>
 
-            <span style="font-weight: normal;">General Information</span> <br>
+            <span style="font-weight: normal;">Incident Information</span> <br>
             <select id="school_select" class="text-input">
                 <option>Select a school</option>
                 <option>Bridgewood Secondary School</option>
             </select> <br><br>
+            <input type="text" id="reporter_username_input" class="text-input" placeholder="Your Roblox Username"> <br><br>
             <input type="text" id="username_input" class="text-input" placeholder="Victims'/Offenders' Roblox Username"> <br><br>
             <select id="issue_select" class="text-input">
                 <option>Select an incident type.</option>
@@ -68,48 +69,63 @@
             <input type="submit" id="submit_button" class="submit-button" value="Submit Action">
         </div>
 
-        <script>
-            document.addEventListener('DOMContentLoaded', function() {
-                document.getElementById('submit_button').addEventListener('click', function(e) {
-                    e.preventDefault(); // Prevent the default form submission
+     <script>
+document.addEventListener('DOMContentLoaded', function() {
+    document.getElementById('submit_button').addEventListener('click', function(e) {
+        e.preventDefault(); // Prevent the default form submission
 
-                    // Capture the form data
-                    var school = document.getElementById('school_select').value;
-                    var username = document.getElementById('username_input').value;
-                    var issueType = document.getElementById('issue_select').value;
-                    var notes = document.getElementById('notes_input').value;
+        // Capture the form data
+        var school = document.getElementById('school_select').value;
+        var victimUsername = document.getElementById('username_input').value;
+        var issueType = document.getElementById('issue_select').value;
+        var notes = document.getElementById('notes_input').value;
+        var reporterUsername = document.getElementById('reporter_username_input').value; // New field
 
-                    // Determine the webhook URL based on the selected school
-                    var webhookUrl = '';
-                    switch(school) {
-                        case 'Bridgewood Secondary School':
-                            webhookUrl = 'https://discord.com/api/webhooks/1236325309637464114/3q-SMPwlq_UIRd9GycqoszZpjGPNPY8IcCRffU7Ndj_3q75lB2nj8hiRXs1cGs7UqB7Q';
-                            break;
-                        // Add other schools and their webhook URLs here
-                    }
+        // Determine the webhook URL based on the selected school
+        var webhookUrl = '';
+        switch(school) {
+            case 'Bridgewood Secondary School':
+                webhookUrl = 'https://discord.com/api/webhooks/1236325309637464114/3qSMPwlq_UIRd9GycqoszZpjGPNPY8IcCRffU7Ndj_3q75lB2nj8hiRXs1cGs7UqB7Q';
+                break;
+            // Add other schools and their webhook URLs here
+        }
 
-                    // Create the payload to send
-                    var payload = {
-                        content: `School: ${school}\nUsername: ${username}\nIssue Type: ${issueType}\nNotes: ${notes}`
-                    };
+        // Create the payload to send as an embed
+        var payload = {
+            embeds: [{
+                title: "New Report Submitted",
+                color: 5814783,
+                fields: [
+                    { name: "School", value: school, inline: true },
+                    { name: "Victim's/Offender's Username", value: victimUsername, inline: true },
+                    { name: "Reporter's Username", value: reporterUsername, inline: true },
+                    { name: "Issue Type", value: issueType, inline: false },
+                    { name: "Notes", value: notes, inline: false }
+                ],
+                footer: {
+                    text: "Report System"
+                }
+            }]
+        };
 
-                    // Send the data to the Discord webhook
-                    fetch(webhookUrl, {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify(payload)
-                    }).then(response => {
-                        if(response.ok) {
-                            alert('Data submitted successfully!');
-                        } else {
-                            alert('An error occurred while submitting the data.');
-                        }
-                    });
-                });
-            });
-        </script>
+        // Send the data to the Discord webhook
+        fetch(webhookUrl, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(payload)
+        }).then(response => {
+            if(response.ok) {
+                alert('Data submitted successfully!');
+            } else {
+                alert('An error occurred while submitting the data.');
+            }
+        });
+    });
+});
+</script>
+
     </body>
 </html>
 
