--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -55,6 +55,7 @@
             <select id="school_select" class="text-input">
                 <option>Select a school</option>
                 <option>Bridgewood Secondary School</option>
+                <option>Southbrook Academy</option>
             </select> <br><br>
             <input type="text" id="reporter_username_input" class="text-input" placeholder="Your Roblox Username"> <br><br>
             <input type="text" id="username_input" class="text-input" placeholder="Victims'/Offenders' Roblox Username"> <br><br>
@@ -87,7 +88,9 @@ document.addEventListener('DOMContentLoaded', function() {
             case 'Bridgewood Secondary School':
                 webhookUrl = 'https://discord.com/api/webhooks/1236325309637464114/3q-SMPwlq_UIRd9GycqoszZpjGPNPY8IcCRffU7Ndj_3q75lB2nj8hiRXs1cGs7UqB7Q';
                 break;
-            // Add other schools and their webhook URLs here
+            case 'Southrbook Academy':
+                webhookUrl = 'https://discord.com/api/webhooks/1236334627065565325/mUY6uTdXksxcX1L0Bu4-uoTSLm9YjDELvj1D6qF_tGk2khLQQapO_cfqL2i1UNc6VgL_'
+                break;
         }
 
         // Create the payload to send as an embed
