--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -88,8 +88,8 @@ document.addEventListener('DOMContentLoaded', function() {
             case 'Bridgewood Secondary School':
                 webhookUrl = 'https://discord.com/api/webhooks/1236325309637464114/3q-SMPwlq_UIRd9GycqoszZpjGPNPY8IcCRffU7Ndj_3q75lB2nj8hiRXs1cGs7UqB7Q';
                 break;
-            case 'Southrbook Academy':
-                webhookUrl = 'https://discord.com/api/webhooks/1236334627065565325/mUY6uTdXksxcX1L0Bu4-uoTSLm9YjDELvj1D6qF_tGk2khLQQapO_cfqL2i1UNc6VgL_'
+            case 'Southbrook Academy':
+                webhookUrl = 'https://discord.com/api/webhooks/1236334627065565325/mUY6uTdXksxcX1L0Bu4-uoTSLm9YjDELvj1D6qF_tGk2khLQQapO_cfqL2i1UNc6VgL_';
                 break;
         }
 
