--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -70,65 +70,71 @@
             <input type="submit" id="submit_button" class="submit-button" value="Submit Action">
         </div>
 
-     <script>
-document.addEventListener('DOMContentLoaded', function() {
+        <script>
+  document.addEventListener('DOMContentLoaded', function() {
+    var accessCodes = {
+        'Bridgewood Secondary School': '5723', // Replace with the actual access code
+        'Southbrook Academy': '6969' // Replace with the actual access code
+    };
+
     document.getElementById('submit_button').addEventListener('click', function(e) {
         e.preventDefault(); // Prevent the default form submission
 
-        // Capture the form data
         var school = document.getElementById('school_select').value;
         var victimUsername = document.getElementById('username_input').value;
         var issueType = document.getElementById('issue_select').value;
         var notes = document.getElementById('notes_input').value;
-        var reporterUsername = document.getElementById('reporter_username_input').value; // New field
+        var reporterUsername = document.getElementById('reporter_username_input').value;
 
-        // Determine the webhook URL based on the selected school
-        var webhookUrl = '';
-        switch(school) {
-            case 'Bridgewood Secondary School':
-                webhookUrl = 'https://discord.com/api/webhooks/1236325309637464114/3q-SMPwlq_UIRd9GycqoszZpjGPNPY8IcCRffU7Ndj_3q75lB2nj8hiRXs1cGs7UqB7Q';
-                break;
-            case 'Southbrook Academy':
-                webhookUrl = 'https://discord.com/api/webhooks/1236334627065565325/mUY6uTdXksxcX1L0Bu4-uoTSLm9YjDELvj1D6qF_tGk2khLQQapO_cfqL2i1UNc6VgL_';
-                break;
-        }
+        var enteredAccessCode = prompt('Please enter the access code:');
 
-        // Create the payload to send as an embed
-        var payload = {
-            embeds: [{
-                title: "New Report Submitted",
-                color: 5814783,
-                fields: [
-                    { name: "School", value: school, inline: true },
-                    { name: "Victim's/Offender's Username", value: victimUsername, inline: true },
-                    { name: "Reporter's Username", value: reporterUsername, inline: true },
-                    { name: "Issue Type", value: issueType, inline: false },
-                    { name: "Notes", value: notes, inline: false }
-                ],
-                footer: {
-                    text: "Report System"
-                }
-            }]
-        };
-
-        // Send the data to the Discord webhook
-        fetch(webhookUrl, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(payload)
-        }).then(response => {
-            if(response.ok) {
-                alert('Data submitted successfully!');
-            } else {
-                alert('An error occurred while submitting the data.');
+        if(enteredAccessCode !== null && accessCodes[school] && enteredAccessCode === accessCodes[school]) {
+            var webhookUrl = '';
+            switch(school) {
+                case 'Bridgewood Secondary School':
+                    webhookUrl = 'https://discord.com/api/webhooks/1236325309637464114/3q-SMPwlq_UIRd9GycqoszZpjGPNPY8IcCRffU7Ndj_3q75lB2nj8hiRXs1cGs7UqB7Q';
+                    break;
+                case 'Southbrook Academy':
+                    webhookUrl = 'https://discord.com/api/webhooks/1236334627065565325/mUY6uTdXksxcX1L0Bu4-uoTSLm9YjDELvj1D6qF_tGk2khLQQapO_cfqL2i1UNc6VgL_';
+                    break;
             }
-        });
+
+            var payload = {
+                embeds: [{
+                    title: "New Report Submitted",
+                    color: 5814783,
+                    fields: [
+                        { name: "School", value: school, inline: true },
+                        { name: "Victim's/Offender's Username", value: victimUsername, inline: true },
+                        { name: "Reporter's Username", value: reporterUsername, inline: true },
+                        { name: "Issue Type", value: issueType, inline: false },
+                        { name: "Notes", value: notes, inline: false }
+                    ],
+                    footer: {
+                        text: "Report System"
+                    }
+                }]
+            };
+
+            fetch(webhookUrl, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(payload)
+            }).then(response => {
+                if(response.ok) {
+                    alert('Data submitted successfully!');
+                } else {
+                    alert('An error occurred while submitting the data.');
+                }
+            });
+        } else {
+            alert('Incorrect access code or submission cancelled.');
+        }
     });
 });
-</script>
-
+    </script>
     </body>
 </html>
 
