--- a/MainSite/Panel/index.html
+++ b/MainSite/Panel/index.html
@@ -66,6 +66,7 @@
                 <option>SafeGuarding Issue (Safeguarding incident)</option>
                 <option>Staff Strike</option>
                 <option>Student Exclusion</option>
+                <option>Staff member fired / banned</option>
             </select> <br><br>
             <input type="text" id="notes_input" class="text-input" placeholder="Incident Notes"> <br><br>
             <input type="submit" id="submit_button" class="submit-button" value="Submit Action">
