--- a/MainSite/Homepage/index.html
+++ b/MainSite/Homepage/index.html
@@ -1,1 +1,35 @@
+<html>
+    <head>
+        <title>Biox</title>
+    </head>
 
+    <style>
+        #top_banner {
+            height: 100px;
+            background-color: cadetblue;
+            color: white;
+            padding: 4px;
+        }
+
+        #main {
+            background-color: white;
+            width: 800px;
+            height: auto;
+            margin: auto;
+            margin-top: 50px;
+            padding: 10px;
+            padding-top: 50px;
+            text-align: center;
+            font-weight: bold;
+        }
+    </style>
+
+    <body style="font-family: tahoma; background-color: #e9ebee">
+        <div id="top_banner">
+            <div style="font-size: 40px;">Biox</div>
+        </div>
+        <div id=main>
+          <a href="">Report Panel</a>
+          <a href="">Applications</a>
+          <a href="">Game Admin Panel</a>
+        </div>
